force-app/main/default/objects/CWS_Contract__c/CWS_Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>