force-app/main/default/objects/CWS_Contract__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Contract ID</label>
    <type>AutoNumber</type>
</CustomField>