force-app/main/default/objects/CWS_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFC (RCC) Contract</fullName>
            </value>
            <value>
                <fullName>TF(CPA) Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>