force-app/main/default/objects/CWS_Contract__c/fields/MD_CHESSIE_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>MD_CHESSIE_Provider_ID__c</fullName>
    <label>MD CHESSIE Provider ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>