force-app/main/default/objects/CWS_Contract__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CWS_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>